@@ -4,6 +4,9 @@ Changes in version 1.01
 - Reversed the order of cvm-validate and qmail-validate in the wrapper
   scripts (and documentation) due to the semantics of the two plugins.
 
+- Added a list of built-in plugins.  The list currently contains the
+  three accept* plugins, which are extremely trivial.
+
 Development of this version has been sponsored by FutureQuest, Inc.
 ossi@FutureQuest.net  http://www.FutureQuest.net/
 -------------------------------------------------------------------------------
